[project]
name = "rag-with-groqai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "faiss-cpu>=1.12.0",
    "langchain>=0.3.27",
    "langchain-community>=0.3.27",
    "langchain-groq>=0.3.7",
    "pypdf>=6.0.0",
    "python-dotenv>=1.1.1",
    "streamlit>=1.48.1",
]
